# camoverlay

./: .gitignore  Cargo.toml  README.md  io.github.didley.CamOverlay.yml  justfile  meson.build
data/: io.github.didley.CamOverlay.desktop.in  io.github.didley.CamOverlay.gschema.xml  io.github.didley.CamOverlay.metainfo.xml  style.css
src/: application.rs  main.rs  window.rs
