[package]
name = "camoverlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "camoverlay"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
gstreamer = { version = "0.23" }
gstreamer-video = { version = "0.23" }
gio = { version = "0.20" }
glib = { version = "0.20" }
anyhow = "1.0"
